# town

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  Procfile  README.md  TODO.md  deps.edn  docker-compose.yaml  kube.yaml  package.json  pyproject.toml  shadow-cljs.edn  town.py
api/: .gitignore  db.py  deps.edn  docker-compose.yaml  main.py  package.json  shadow-cljs.edn
api/resources/urban/: contents.sql  planning.sql
api/routers/council/: maps.py  spriter.py  tiler.py  tiles.py
api/routers/web/: maps.py  tiles.py
api/specs/: map.py
app/: Dockerfile  package-lock.json  package.json
app/src/: index.html
app/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  tile.model.ts
app/src/assets/: map.json
cms/: .gitignore  Dockerfile  Makefile  boot.php  composer.json  docker-compose.yaml
cms/public/: index.php  maps.csv
cms/src/: chain.phel
cms/town/: town.php
docker/cljs/: Dockerfile
docs/: index.html
docs/js/: main.js
lib/cljs/: fetch.cljs
migrations/: 20220528174000-create-maps-table.sql  20220528174730-create-tiles-table.sql  20220528174815-create-pages-table.sql  20220603193600-seed-maps.sql  20220603193610-seed-tiles.sql
resources/public/: index.html
resources/urban/: planning.sql
src/app/: app.component.html  app.module.ts  comms.service.spec.ts  comms.service.ts  map.model.ts  matrix.type.ts  tile.model.ts  utils.service.ts
src/assets/: map.json  tiles.json
src/environments/: environment.ts
src/kube/: ingress.edn  service.edn  set.edn
tests/: app.rb
(+50 files in other folders)
